fix on mobile safari

--- a/app/assets/stylesheets/spree/frontend/brand.scss
+++ b/app/assets/stylesheets/spree/frontend/brand.scss
@@ -37,16 +37,21 @@ $brand-teal: #37fce0;
     border-radius: 0.1rem;
   }
 }
+
+@import "bootstrap";
+
 @supports (overflow:-webkit-marquee) and (justify-content:inherit) {
-  .brand-container {
-    > .brand-only {
-      letter-spacing: 0.065em;
+  @include media-breakpoint-down(sm) {
+    .brand-container {
+      > .brand-only {
+        letter-spacing: 0.065em;
+      }
+      > .brand-square {
+        top: -2.29em;
+      }
     }
-    > .brand-square {
-      top: -2.30em;
+    body {
+      background-color:red !important;
     }
-  }
-  body {
-    background-color:red !important;
   }
 }
